--- a/src/app/features/usuario-tareas/components/mis-tareas/mis-tareas.html
+++ b/src/app/features/usuario-tareas/components/mis-tareas/mis-tareas.html
@@ -18,6 +18,7 @@
               'bg-green-50 text-green-600': tarea.estado === 'Completada',
               'bg-blue-50 text-blue-600': tarea.estado === 'En progreso',
               'bg-yellow-50 text-yellow-600': tarea.estado === 'Pendiente',
+              'bg-orange-50 text-orange-600': tarea.estado === 'Pausada',
               'bg-gray-200 text-gray-700': tarea.estado === 'Cerrada'
             }">
         {{tarea.estado}}
